headlamp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - headlamp.xyz.abc
      secretName: homelab-tls
  rules:
    - host: headlamp.xyz.abc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-headlamp
                port:
                  number: 80
